# OwlRenderer

./: .gitignore  CMakeLists.txt  README.md
Include/Math/: Geometry.h  Linear.h  Math.h  Vec.h
Source/: Core.h
Source/ImageProcessor/: ImageProcessor.h
Source/Math/: Geometry.h  Linear.cpp  Linear.h  Mat.h  Math.h  Matrix.h  Vec.h  Vector.cpp  Vector.h
Source/ModelProcessor/: BaseModel.h  Model.h  ModelProcessor.h  ObjModel.cpp  ObjModel.h
Source/ModelProject/: Model.h  ObjModel.cpp  ObjModel.h
Source/Renderer/: Camera.h  Rasterize.cpp  Rasterize.h
Source/Shader/: BaseShader.h  Shader.h  UnlitShader.cpp  UnlitShader.h
Test/: main.cpp
